#2529 Fixed visible event list in new ui - revert common_DEFAULT.css

--- a/WebContent/assets/common_DEFAULT.css
+++ b/WebContent/assets/common_DEFAULT.css
@@ -271,8 +271,6 @@ html > body .dojoTreeNodeLabelTitle {
   border-style: solid;
   padding: 1px 5px;
   color: black;
-  text-align:center;
-  vertical-align:middle;
 }
 
 @media screen and (max-width: 730px) {
